--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "ci-info": "^4.1.0",
     "jest": "^29.7.0",
     "serverless": "^3.38.0",
     "serverless-offline": "^14.3.4"
